# multishiva

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IDEA.md  LICENSE  MACOS-SETUP.md  NETWORK-IPV6.md  README.md  diagnose-macos.sh  install-hooks.sh  multishiva-agent-complete.yml.example  multishiva-agent.yml.example  multishiva-mac.yml.example  multishiva.yml.example  package.json  setup-firewall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
gui/: package-lock.json  package.json
gui/src/: App.css  App.tsx  index.css
gui/src/components/: MachineGrid.tsx  SettingsPanel.tsx  StatusBar.tsx
hooks/: pre-commit
src/: app.rs  cli.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/core/: clipboard.rs  config.rs  discovery.rs  events.rs  fingerprint.rs  focus.rs  input.rs  input_evdev.rs  keyring.rs  logging.rs  mod.rs  network.rs  permissions.rs  simulation.rs  topology.rs
tests/: test_cli.rs  test_config.rs  test_events.rs  test_fingerprint.rs  test_focus.rs  test_input.rs  test_integration.rs  test_network.rs  test_security.rs  test_simulation.rs  test_topology.rs
