[package]
name = "multishiva"
version = "1.1.0"
edition = "2021"
authors = ["yrbane"]
description = "Control multiple computers with one keyboard and mouse over LAN"
repository = "https://github.com/yrbane/multishiva"
license = "MIT"
keywords = ["kvm", "network", "tls", "input-sharing"]
categories = ["network-programming", "gui"]

[lib]
name = "multishiva"
path = "src/lib.rs"

[features]
default = []
gui = []  # GUI support via Tauri (coming in v1.0)

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rmp-serde = "1.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Input handling
rdev = "0.5"

# Linux-specific input handling (evdev for Wayland support)
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
nix = { version = "0.29", features = ["user"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrent collections
dashmap = "6.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Time & Directories
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hostname = "0.4"

# mDNS service discovery
mdns-sd = "0.13"

# Clipboard synchronization
clipboard-rs = "0.2"

# Secure credential storage
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
