[package]
name = "multishiva-gui"
version = "1.0.0"
description = "MultiShiva GUI - Control multiple computers with one keyboard and mouse"
authors = ["yrbane"]
license = "MIT"
repository = "https://github.com/yrbane/multishiva"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "multishiva_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
